--- a/style.css
+++ b/style.css
@@ -79,7 +79,7 @@ body {
     justify-content: center;
 
     margin-bottom: 5px;
-    box-shadow: 0 2px 8px #E6B800(0, 0, 0, 0.1);
+    box-shadow: 0 2px 8px #E6B800;
     border: 2px solid var(--secondary);
     /* Allow margin auto to center the fit-content box */
     margin-left: auto;
@@ -554,3 +554,4 @@ body {
     }
 
 }
+
